Add overlapping fix logic (#409)
This adds more the ability to group fixes by location and more tests for
all the fix candidate searcher logic.